# Read

./: .gitattributes  .gitignore  README.md  RELEASING.md  first-release-checklist.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml  republish-release.yml
scripts/: prepare-rc-release.mjs  publish-release.mjs  release-common.mjs  sync-version.mjs  verify-update-feed.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.mobile.conf.json  tauri.rc.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug.rs  error.rs  lib.rs  main.rs  models.rs  store.rs
src-tauri/src/normalization/: analyzer.rs  detection.rs  manifest.rs  mod.rs  transform.rs  worker.rs
src-tauri/src/store/: catalog.rs  mod.rs  notes.rs  paths.rs  state.rs
src-tauri/src/store/render/: cache.rs  jpeg_windows.rs  mod.rs  session.rs
src-tauri/src/store/tests/: catalog_tests.rs  mod.rs  note_tests.rs  render_tests.rs  state_tests.rs  support.rs
src/components/: BookWorkspace.test.ts  BookWorkspace.test.tsx  BookWorkspace.tsx  CollectionView.tsx  CollectionViewRefresh.tsx  CommandPalette.test.ts  CommandPalette.tsx  ContinuousPdfViewer.tsx  DisplaySettingsPopover.test.ts  DisplaySettingsPopover.tsx  DocumentWorkspaceHeader.tsx  LibraryOverlay.tsx  NativePdfTextLayer.test.ts  NativePdfTextLayer.tsx  NotesViewport.tsx  NotesWorkspace.tsx  OutlineOverlay.test.ts  OutlineOverlay.test.tsx  OutlineOverlay.tsx  PaneResizeHandle.test.ts  PaneResizeHandle.tsx  (+12 more)
(+166 files in other folders)
