[package]
name = "readr"
version = "0.9.0-rc.6"
description = "A calm, command-first PDF reader."
authors = ["OpenAI Codex"]
edition = "2021"

[[bin]]
name = "Readr"
path = "src/main.rs"

[lib]
name = "calm_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
mupdf = { version = "0.7.0", default-features = false }
sanitize-filename = "0.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-updater = "2.0.0"
thiserror = "1.0.65"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.13.0"

[package.metadata]

[patch.crates-io]
# The published `mupdf 0.7.0` crate fails on MSVC because `max_align_t` is not
# available in the generated source. Keep the patched local copy in-repo so
# fresh clones build consistently on Windows.
mupdf = { path = "../vendor/mupdf" }
